--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -23,14 +23,44 @@
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script>
+window.onwheel = beforeScroll;
+window.onkeydown = beforeScroll;
+var scrollVal = 0;
+function beforeScroll(e) {
+    if (e.type == 'wheel') {
+        if (e.deltaY < 0) {
+            scrollUp();
+        } else {
+            scrollDown();
+        }
+    }
+    else if (e.type == 'keydown' && (e.key == 'ArrowDown' || e.key == 'ArrowUp')) {
+        if (e.key == 'ArrowDown')
+            scrollDown();
+        else if (e.key == 'ArrowUp')
+            scrollUp();
+    }
 
+    return;
+}
+
+function scrollUp() {
+    if (scrollVal > 0)
+        scrollVal -= 300;
+
+    this.scroll(0, scrollVal);
+}
+
+function scrollDown() {
+    if (scrollVal < document.body.scrollHeight)
+        scrollVal += 300;
+    //should detect for maximum scroll
+    this.scroll(0, scrollVal);
+}
+</script>
 </head>
 <body>
 <app-root></app-root>
-<footer>
-    <div class="row justify-content-center mb-5">
-      Copyright © 2021 AgroLinks 
-    </div>
-</footer>
 </body>
 </html>
