--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -61,36 +61,33 @@ function scrollDown() {
 
 
 
+function reInitCount(){
+  $(".stat-count").each(function() {
+    $(this).html('0');
+    count($(this));
+  });
+}
 
-$(window).scroll(testScroll);
-    var viewed = false;
+function count($this) {
+  var current = parseInt($this.html(), 10);
+  current = current + 1;
+  $this.html(++current);
+  if (current > $this.data('count')) {
+    $this.html($this.data('count'));
+  } else {
+    setTimeout(function() {
+      count($this)
+    }, 1);
+  }
+}
 
-    function isScrolledIntoView(elem) {
-        var docViewTop = $(window).scrollTop();
-        var docViewBottom = docViewTop + $(window).height();
-
-        var elemTop = $(elem).offset().top;
-        var elemBottom = elemTop + $(elem).height();
-
-        return ((elemBottom <= docViewBottom) && (elemTop >= docViewTop));
-    }
-
-    function testScroll() {
-      if (isScrolledIntoView($(".numbers")) && !viewed) {
-          viewed = true;
-          $('.value').each(function () {
-          $(this).prop('Counter',0).animate({
-              Counter: $(this).text()
-          }, {
-              duration: 4000,
-              easing: 'swing',
-              step: function (now) {
-                  $(this).text(Math.ceil(now));
-              }
-          });
-        });
-      }
-    }
+$(window).scroll(function (event) {
+    var scroll = $(window).scrollTop();
+      if(scroll == 0)
+         setTimeout(function(){reInitCount();},500);
+      
+         
+});
 </script>
 </head>
 <body>
